# harbor-nix

./: README.md  ROADMAP.md  flake.nix  pyproject.toml
agentix/: __init__.py  closure.py  models.py  trajectory.py
agentix/agents/: __init__.py  protocol.py
agentix/deployment/: base.py  docker.py
agentix/orchestrator/: __init__.py  cli.py  orchestrator.py
agentix/parsers/: claude_code.py
agentix/runtime/: __main__.py  client.py  executor.py  server.py
agents/_template/: runner.py
agents/aider/: runner.py
agents/claude-code/: default.nix  runner.py
agents/codex/: runner.py
benchmarks/swebench/: run.py
docs/: DEVELOPMENT.md  agent-protocol.md  architecture.md  project-plan.md  versioning-storage.md
examples/claude-code-swebench/: README.md  run.py
examples/claude-code-swebench/stubs/agent/: serve
examples/claude-code-swebench/stubs/dataset/: serve
runtime/: default.nix
scripts/: build-data-image.sh
src/agentix/: __init__.py  models.py
src/agentix/agents/: __init__.py
src/agentix/deployment/: __init__.py  base.py  docker.py
src/agentix/runtime/: __init__.py  __main__.py  client.py  executor.py  server.py
src/hnix/: __init__.py  models.py
src/hnix/agents/: __init__.py  protocol.py
src/hnix/deployment/: __init__.py  base.py  docker.py
src/hnix/runtime/: __init__.py  __main__.py  client.py  executor.py  server.py
tests/: smoke_docker.py  test_executor.py  test_models.py  test_orchestrator.py  test_parser_claude_code.py  test_runners.py  test_server.py  test_trajectory.py
